# literate_programming_system

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
examples/plugins/: js.lua  json.lua  py.lua
examples/projects/python/: main.py.lpnb
examples/projects/python/app/: app.py.lpnb
examples/projects/python/lib/: primes.py.lpnb
examples/projects/python/static/: input_spec.txt
examples/projects/python_and_node_js/: app.js.lpnb  package.json.lpnb  python_call.js.lpnb
examples/projects/python_and_node_js/python_app/: primes.py.lpnb
examples/projects/with_makefile/: Makefile.lpnb
src/: error.rs  main.rs
src/builds/: builder.rs  index.rs  mod.rs
src/builds/code/: code_builder.rs  config.rs  mod.rs
src/builds/code/plugins/: caller.rs  mod.rs  plugin.rs
src/builds/docs/: config.rs  docs_builder.rs  mod.rs
src/builds/format/: mod.rs  module.rs  project.rs  structs.rs
src/builds/spec/: mod.rs  module.rs  project.rs  sections.rs  structs.rs  utils.rs
src/cli/: args_processor.rs  mod.rs  structs.rs
src/config/: config.rs  constants.rs  mod.rs
tests/: cli_integration.rs
