[package]
name = "literate_programming"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
walkdir = "2.3"
pulldown-cmark = "0.9"
thiserror = "2.0.11"
mockall = "0.13.1"
tempfile = "3.16.0"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_yaml = "0.9.34"
mlua = { version = "0.10.3", default-features = false, features = ["lua54", "vendored"] }
